--- a/常用网址.md
+++ b/常用网址.md
@@ -1,4 +1,23 @@
+# 网址
 ip 控制网关
 http://ipgw.neu.edu.cn/srun_portal_pc.php?ac_id=1&
+
 DBLP 论文数据库
 https://dblp.uni-trier.de/
+
+google学术镜像
+http://www.ndtsg.com/
+
+SSO
+https://172.16.10.119/login?path=/dashboard/toDashboard
+
+英文语法检查
+https://www.grammarly.com/
+
+AAMAS2020登录
+https://aamas.confmaster.net/accounts/login/?next=/author/paper/edit/1043/
+
+
+DASFAA2020登录
+https://easychair.org/account/signin_timeout?l=8EoAIHAsk1dP3PBTe6zAkt#
+
