--- a/博客集.md
+++ b/博客集.md
@@ -1,1 +1,17 @@
 ## 博客
+
+Ubuntu16.04下安装cuda和cudnn的三种方法（亲测全部有效）
+https://blog.csdn.net/wanzhen4330/article/details/81699769
+
+
+LaTex 论文排版(1): Win10 下 LaTex所需软件安装 (Tex live 2018 + Tex studio)
+https://blog.csdn.net/zaishuiyifangxym/article/details/88170827
+
+windows安装Python虚拟环境
+https://www.cnblogs.com/jiuyang/p/7815126.html
+
+VS Code 远程开发环境搭建
+https://segmentfault.com/a/1190000020684724?utm_source=tag-newest
+
+Ubuntu怎样安装Python3.6
+https://blog.csdn.net/chuanyuanshuo/article/details/86596456
