--- a/博客集.md
+++ b/博客集.md
@@ -15,3 +15,12 @@ https://segmentfault.com/a/1190000020684724?utm_source=tag-newest
 
 Ubuntu怎样安装Python3.6
 https://blog.csdn.net/chuanyuanshuo/article/details/86596456
+
+机器学习画图工具python scikit-plot
+https://blog.csdn.net/u013328485/article/details/93973248
+
+Python学习笔记——数据分析之Bokeh绘图
+https://blog.csdn.net/tichimi3375/article/details/82458845
+
+可视化利器Visdom
+https://www.cnblogs.com/fanghao/p/10256287.html
