--- a/博客集.md
+++ b/博客集.md
@@ -24,3 +24,6 @@ https://blog.csdn.net/tichimi3375/article/details/82458845
 
 可视化利器Visdom
 https://www.cnblogs.com/fanghao/p/10256287.html
+
+最强的优化器:把RAdam和LookAhead协同组合
+https://blog.csdn.net/hahabeibei123456789/article/details/100115491
